--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@2
+      - uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@2
         with:
@@ -26,7 +26,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - uses: actions/checkout@2
+      - uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@2
         with:
@@ -45,7 +45,7 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - uses: actions/checkout@2
+      - uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@2
         with:
