--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
-        uses: actions/setup-java@2
+        uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribuition: 'adopt'
@@ -28,7 +28,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
-        uses: actions/setup-java@2
+        uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribuition: 'adopt'
@@ -47,7 +47,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
-        uses: actions/setup-java@2
+        uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribuition: 'adopt'
