--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '11'
-          distribuition: 'adopt'
+          distribution: 'adopt'
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
@@ -31,7 +31,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '11'
-          distribuition: 'adopt'
+          distribution: 'adopt'
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
@@ -50,7 +50,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '11'
-          distribuition: 'adopt'
+          distribution: 'adopt'
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
