--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,9 @@
             <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
+                	<groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.0.2</version>
+                    <version>3.2.0</version>
                     <configuration>
                         <archive>
                             <manifest>
@@ -58,8 +59,9 @@
                     </configuration>
                 </plugin>
                 <plugin>
+                	<groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
-                    <version>2.5.5</version>
+                    <version>3.3.0</version>
                     <configuration>
                         <archive>
                             <manifest>
